--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,7 @@ header{
   background-color: white;
   border-color: #bfbfbf;
   cursor: pointer;
+  margin-bottom: 5em;
 }
 
 a{
@@ -182,4 +183,60 @@ a{
   float: left;
   width: 33.33%;
   background-color: #f5f5f5;
+}
+
+
+
+
+
+@media screen and (max-width: 750px) {
+  .box {
+    float: left;
+    width: 100%; /* three boxes (use 25% for four, and 50% for two, etc) */
+    /* padding: 50px; /* if you want space between the images */ */
+  }
+
+  .box4{
+    float: left;
+    width: 50%;
+  }
+  .color1{
+    float: left;
+    width: 100%;
+    background-color: #333333;
+    color: white;
+  }
+  .color2{
+    float: left;
+    width: 100%;
+    background-color: #bfbfbf;
+  }
+  .color2{
+    float: left;
+    width: 100%;
+    background-color: #f5f5f5;
+  }
+    .navbar {
+    font-family: Montserrat, sans-serif;
+    margin-bottom: 0;
+    background-color: #2d2d30;
+    border: 0;
+    font-size: 11px !important;
+    letter-spacing: 4px;
+    opacity: 0.9;
+  }
+  .navbar li a, .navbar .navbar-brand {
+    color: #d5d5d5 !important;
+  }
+  .navbar-nav li a:hover {
+    color: #fff !important;
+  }
+  .navbar-nav li.active a {
+    color: #fff !important;
+    background-color: #29292c !important;
+  }
+  .navbar-default .navbar-toggle {
+    border-color: transparent;
+  }
+
 }
