--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,17 @@ header{
   text-align: center;
   font-size: 80px;
   padding-top: 15rem;
+
+  animation-name: head;
+  animation-duration: 0.8s;
+  animation-delay: 0;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+}
+
+@keyframes head {
+	0% {transform: translateY(-80px);}
+	100% {transform:translateY(0px);}
 }
 
 .biosub{
@@ -101,6 +112,10 @@ header{
   background-color: #333333;
   color: white;
 }
+#product1 {
+  background-color: #333333;
+  color: white;
+}
 
 #ux{
 }
@@ -111,19 +126,28 @@ header{
 
 .box {
   float: left;
-  width: 50%; /* three boxes (use 25% for four, and 50% for two, etc) */
-  /* padding: 50px; /* if you want space between the images */ */
+  width: 50%;
+  height:100%; /* three boxes (use 25% for four, and 50% for two, etc) */
+  /* padding: 50px; /* if you want space between the images */
 }
 .box2{
   float: left;
   width: 25%;
+  height:100%;
 }
 
 .box4{
   float: left;
   width: 25%;
+  height:100%;
 }
-
+.boxux{
+  float: left;
+  width: 50%;
+  height:100%;
+  color:#333333;
+  background-color:#f5f5f5;
+}
 
 .clearfix::after {
   content: "";
@@ -133,10 +157,12 @@ header{
 
 .p1 img{
   width: 100%;
+  height:100%;
   /* position: absolute; */
 }
 .pp1 img{
   width: 100%;
+  height:100%;
 }
 
 /* button */
@@ -180,8 +206,6 @@ a{
 }
 .contactpart{
   margin: 3em;
-  /* border: 1;
-  border-color: #333333; */
 }
 .contact{
   text-align: center;
@@ -193,23 +217,58 @@ a{
 .color1{
   float: left;
   width: 33.33%;
+  height:100%;
   background-color: #333333;
   color: white;
 }
 .color2{
   float: left;
   width: 33.33%;
+  height:100%;
   background-color: #bfbfbf;
 }
 .color2{
   float: left;
   width: 33.33%;
+  height:100%;
   background-color: #f5f5f5;
 }
 .contain a{
   color:white;
 }
+/* contact page */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
 
+.btn2{
+  background-color: #333333;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn2:hover {
+  background-color: #333333;
+  opacity: 0.8;
+  text-decoration: none;
+  color:white;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  padding: 20px;
+}
 /* styleguide margin */
 #interactive_elements{
   margin-left: 3em;
@@ -233,32 +292,45 @@ a{
 @media screen and (max-width: 750px) {
   .box {
     float: left;
-    width: 100%; /* three boxes (use 25% for four, and 50% for two, etc) */
-    /* padding: 50px; /* if you want space between the images */ */
+    width: 100%;
+    height:100%;/* three boxes (use 25% for four, and 50% for two, etc) */
+    /* padding: 50px; /* if you want space between the images */
+  }
+  .boxux{
+    float: left;
+    width: 100%;
+    height:100%;
+    color:#333333;
+    background-color:#f5f5f5;
   }
   .box2{
     float: left;
     width: 50%;
+    height:100%;
   }
 
   .box4{
     float: right;
     width: 50%;
+    height:100%;
   }
   .color1{
     float: left;
     width: 100%;
+    height:100%;
     background-color: #333333;
     color: white;
   }
   .color2{
     float: left;
     width: 100%;
+    height:100%;
     background-color: #bfbfbf;
   }
   .color2{
     float: left;
     width: 100%;
+    height:100%;
     background-color: #f5f5f5;
   }
     .navbar {
@@ -289,32 +361,45 @@ a{
 @media screen and (max-width: 1350px) {
   .box {
     float: left;
-    width: 100%; /* three boxes (use 25% for four, and 50% for two, etc) */
-    /* padding: 50px; /* if you want space between the images */ */
+    width: 100%;
+    height:100%;/* three boxes (use 25% for four, and 50% for two, etc) */
+    /* padding: 50px; /* if you want space between the images */
+  }
+  .boxux{
+    float: left;
+    width: 100%;
+    height:100%;
+    background-color:#f5f5f5;
+    color:#333333;
   }
   .box2{
     float: left;
     width: 50%;
+    height:100%;
   }
 
   .box4{
     float: right;
     width: 50%;
+    height:100%;
   }
   .color1{
     float: left;
     width: 100%;
+    height:100%;
     background-color: #333333;
     color: white;
   }
   .color2{
     float: left;
     width: 100%;
+    height:100%;
     background-color: #bfbfbf;
   }
   .color2{
     float: left;
     width: 100%;
+    height:100%;
     background-color: #f5f5f5;
   }
     .navbar {
