--- a/css/main.css
+++ b/css/main.css
@@ -80,14 +80,31 @@ header{
 
   animation-name: head;
   animation-duration: 0.8s;
-  animation-delay: 0;
   animation-iteration-count: 1;
   animation-timing-function: linear;
+  -webkit-animation-name: head;
+  -webkit-animation-duration: 0.8s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-name: head;
+  -moz-animation-duration: 0.8s;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-timing-function: linear;
+  -o-animation-name: head;
+  -o-animation-duration: 0.8s;
+  -o-animation-iteration-count: 1;
+  -o-animation-timing-function: linear;
 }
 
 @keyframes head {
-	0% {transform: translateY(-80px);}
-	100% {transform:translateY(0px);}
+	0% {
+    transform: translateY(-50px);
+    color: white;
+  }
+	100% {
+    transform:translateY(0px);
+    color: #333333;
+  }
 }
 
 .biosub{
@@ -122,6 +139,8 @@ header{
 
 * {
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .box {
@@ -164,6 +183,14 @@ header{
   width: 100%;
   height:100%;
 }
+img:hover{
+        -webkit-transition: 0.6s;
+        -moz-transition: 0.6s;
+        -ms-transition: 0.6s;
+        -o-transition: 0.6s;
+        transition: 0.6s;
+        transform: scale(1.03);
+			}
 
 /* button */
 .btn{
@@ -173,6 +200,13 @@ header{
   border-color: #bfbfbf;
   cursor: pointer;
   margin-bottom: 5em;
+}
+.btn:hover{
+  -webkit-transition: 0.6s;
+  -moz-transition: 0.6s;
+  -ms-transition: 0.6s;
+  -o-transition: 0.6s;
+  transform: scale(1.1);
 }
 
 a{
